@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - More options for defining wr limit groups: allow an exact match
+   to the last component of pipeline function class name.
+
 release 59.0.0
  - Following a decision to send data to CLIMB regardless of artic
    QC status, the file glob of the data to upload is changed to
